Startup failure: assert(!Universe::is_module_initialized()) failed: Incorrect java.lang.Module pre module system initialization

XMLWordPrintable

    • b12

      VM crahed during startup with:
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1201/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/65e1fcaf-db47-4be1-9994-485861753ee6/runs/2ec665b1-7ab6-4c49-afcc-f825629942e5/workspace/open/src/hotspot/share/classfile/javaClasses.cpp:838), pid=18009, tid=18023
      # assert(!Universe::is_module_initialized()) failed: Incorrect java.lang.Module pre module system initialization
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0+9) (fastdebug build 13-ea+9)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-ea+9, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xdcb114] java_lang_Class::set_mirror_module_field(Klass*, Handle, Handle, Thread*)+0x324
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/07fc96ef-bf4d-487f-b22f-a84e49f5f44a-S132151/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/54fb0ee7-b53e-4f8d-968f-f7d6b93bfe41/runs/149c427d-fe2e-4f27-8bf7-6b1b2acb4807/testOutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler_3/scratch/2/core.18009)
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

        1. hs_err_pid18009.log
          113 kB
          Leonid Mesnik
        2. replay_pid18009.log
          98 kB
          Leonid Mesnik

            Assignee:
            David Holmes
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: